--- a/src/pages/student/stylesheet.css
+++ b/src/pages/student/stylesheet.css
@@ -1,9 +1,24 @@
 .menuBar {
   border: 2px solid black;
+  float: center;
+
 }
 
 .menuBar * {
   display: inline-block;
   width: 50%;
   text-align: center;
+}
+
+.attenBox {
+	list-style: none;
+	width:50%;
+	style: inline-block;
+	text-align: center;
+
+}
+
+.columns {
+	
+	display: inline-block;	
 }
