--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,37 @@ ul {
   list-style: none;
   padding-left: 0;
 }
+
+html {
+  font-family: Montserrat;
+}
+
+:global .button {
+  border-radius: 10px;
+  transition-duration: .3s;
+  padding: 5px;
+}
+
+:global .button:hover {
+  filter: brightness(1.3);
+}
+
+:global .button:active {
+
+}
+
+:global .button-green {
+  background-color: #27ae60;
+}
+
+:global .button-yellow {
+  background-color: #f1c40f;
+}
+
+:global .button-red {
+  background-color: #f76666;
+}
+
+:global .right {
+  float: right;
+}
