--- a/src/pages/teacher/stylesheet.css
+++ b/src/pages/teacher/stylesheet.css
@@ -19,3 +19,14 @@
 .attendanceButtons * {
   margin: 0 20px;
 }
+
+.gradeRow * {
+  display: inline-block;
+  padding: 10px;
+}
+
+.leftPane {
+  border-right: 3px solid black;
+  width: 50%;
+  text-align: right;
+}
