--- a/src/pages/student/stylesheet.css
+++ b/src/pages/student/stylesheet.css
@@ -1,56 +1,4 @@
-.menuBar {
-  border: 2px solid black;
-  float: center;
-
-}
-
-.menuBar * {
-  display: inline-block;
-  width: 50%;
-  text-align: center;
-}
-
-.wrapper {
-  margin: 20px;
-}
-
-
-.attenBox {
-	list-style: none;
-	width:10%;
-	display: inline-block;
-	text-align: center;
-}
-
-.course * {
-  display: inline-block;
-}
-
-.course {
-}
-
-.grades * {
-  padding: 5px;
-}
-
-.attendanceWrapper * {
-  display: inline-block;
-  font-size: 2rem;
+.student__attendance * {
   padding: 10px;
-}
-
-.leftPane {
-  border-right: 3px solid black;
-  width: 50%;
-  text-align: right;
-}
-
-.courseBreakdown {
-  display: block;
-  border: 1px solid grey;
-}
-
-.courseBreakdown > * {
-  width: 100%;
-  text-align: left;
+  display: inline-block !important;
 }
