--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+html, body, #app, [data-reactroot] {
+  height: 100%;
+}
+
 ul {
   list-style: none;
   padding-left: 0;
@@ -5,12 +9,18 @@ ul {
 
 html {
   font-family: Montserrat;
+  /* color: white; */
+}
+
+h1 {
+  text-align: center;
 }
 
 .button {
   border-radius: 10px;
   transition-duration: .3s;
   padding: 5px;
+  box-shadow: 0 0 20px 5px rgba(0, 0, 0, .2);
 }
 
 .button:hover {
@@ -18,7 +28,8 @@ html {
 }
 
 .button:active {
-
+  filter: brightness(1);
+  box-shadow: inset 0 0 20px 5px rgba(0, 0, 0, .2);
 }
 
 .button-green {
@@ -30,19 +41,23 @@ html {
 }
 
 .button-red {
-  background-color: #f76666;
+  background-color: #b5525f;
 }
 
-.right {
+.float-right {
   float: right;
 }
 
-.center {
+.text-center {
   text-align: center;
 }
 
-.left {
+.text-left {
   text-align: left;
+}
+
+.text-right {
+  text-align: right;
 }
 
 .menuBar {
