--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,7 @@ h3 {
   padding: 5px;
   box-shadow: 0 0 20px 5px rgba(0, 0, 0, .2);
   color: white;
+  background-color: #27ae60;
 }
 
 .button:hover {
