--- a/src/index.css
+++ b/src/index.css
@@ -21,19 +21,30 @@ h3 {
   font-style: italic;
 }
 
-.element, .button {
-  border-radius: 10px;
+.element, .elementl, .button, .buttonl {
   padding: 5px;
-  box-shadow: 0 0 20px 5px rgba(0, 0, 0, .2);
-  color: white;
   margin: auto 0;
   text-align: center;
+  transition: all .5s, border 0s;
+}
+
+.buttonl, .elementl {
+  border: 2px solid #e8e8e8;
+}
+
+.buttonl:hover {
+  background-color: rgb(250, 250, 250);
+}
+
+.element, .button {
+  border-radius: 10px;
+  box-shadow: 0 0 20px 5px rgba(0, 0, 0, .2);
+  color: white;
   display: inline-block;
 }
 
 .button {
   user-select: none;
-  transition-duration: .3s;
   cursor: pointer;
 }
 
@@ -75,9 +86,9 @@ h3 {
 }
 
 .menuBar {
-  /* border: 2px solid black; */
   float: center;
-
+  padding: 20px;
+  border-bottom: 2px solid #e8e8e8;
 }
 
 .menuBar * {
@@ -86,12 +97,12 @@ h3 {
   text-align: center;
 }
 
-.wrapper {
-  margin: 20px;
+.tab_selected {
+  border: 3px solid #239c56;
 }
 
-.level1, .level1 * {
-  text-align: center;
+.wrapper {
+  margin: 20px;
 }
 
 .level1 * {
@@ -103,7 +114,7 @@ h3 {
 }
 
 .level2 {
-  border: 1px solid gray;
+  box-shadow: 0 0 10px 1px rgba(0, 0, 0, .2);
   margin-left: 40px;
   margin-right: 40px;
 }
