--- a/src/pages/student/stylesheet.css
+++ b/src/pages/student/stylesheet.css
@@ -1,5 +1,5 @@
 .student__attendance * {
-  padding: 10px;
+  padding: 20px;
   display: inline-block !important;
   text-align: left;
 }
@@ -11,4 +11,8 @@
 .student__attendance_day {
   color: white;
   box-shadow: 0 0 20px 5px rgba(0, 0, 0, .2);
+}
+
+.student__grade_selected {
+  background-color: rgb(250, 250, 250);
 }
