--- a/src/pages/teacher/stylesheet.css
+++ b/src/pages/teacher/stylesheet.css
@@ -1,3 +1,11 @@
+.teacher__attendance-row {
+  border-bottom: 2px solid #e8e8e8;
+}
+
+.teacher__attendance-row:last-child {
+  border-bottom: 0;
+}
+
 .teacher__attendance-row * {
   display: inline-block;
 }
